# PKasir

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  server.ts  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
components/ui/: button.tsx  confirm-dialog.tsx  empty-state.tsx  page-header.tsx  spinner.tsx  stat-card.tsx
scripts/: build-release.sh
src/: App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  main.rs  models.rs
src-tauri/src/commands/: activity_log.rs  auth.rs  backup.rs  customers.rs  discounts.rs  email.rs  export.rs  held_orders.rs  ingredients.rs  inventory.rs  mod.rs  money_flow.rs  printer.rs  products.rs  purchase_orders.rs  qris.rs  settings.rs  suppliers.rs  transactions.rs  users.rs
src/components/: CalculatorDialog.tsx  CustomerDisplay.tsx  CustomersModule.tsx  DashboardModule.tsx  DiscountsModule.tsx  IngredientsModule.tsx  InventoryModule.tsx  Layout.tsx  LoginScreen.tsx  MoneyFlowModule.tsx  POSModule.tsx  Pagination.tsx  ProductsModule.tsx  ProfileDialog.tsx  PurchaseOrdersModule.tsx  QRCodeDisplay.tsx  RecipeEditor.tsx  ReportsModule.tsx  SettingsModule.tsx  SplashScreen.tsx  SuppliersModule.tsx  TransactionHistoryModule.tsx  UserManagementModule.tsx  VirtualKeyboard.tsx  WindowTitlebar.tsx
src/services/: activity.ts  auth.tsx  db.ts  export.ts  ingredientService.ts  pdfExport.ts  poPdf.ts  printer.ts  qrisService.ts  sound.ts  theme.tsx  useFullscreen.ts  utils.ts
