[package]
name = "pos-system"
version = "0.1.0"
description = "A POS System"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.10", features = [] }
tauri-plugin-thermal-printer = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["net", "time", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.14"
