[package]
name = "pos-system"
version = "0.1.1"
description = "A Full Featured Offline Cashier App"
authors = ["Panuah Technology Intercontinental"]
edition = "2024"

# The runtime process / executable is named "PKasir" (matches the Tauri
# productName) instead of the crate name "pos-system". The library crate stays
# `pos_system`, so `use pos_system::...` in main.rs is unaffected.
[[bin]]
name = "PKasir"
path = "src/main.rs"

# Dev builds: optimize dependencies (SQLite, tauri, etc.) but not our own
# crate. Deps compile once and are cached, so incremental rebuilds stay fast
# while the dev app runs at near-release speed.
[profile.dev.package."*"]
opt-level = 3

# Production build optimizations: smaller binary, better runtime perf.
# Dev builds are unaffected (compile speed preserved).
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[build-dependencies]
tauri-build = { version = "2.6", features = [] }

[dependencies]
tauri = { version = "2.11", features = [] }
tauri-plugin-thermal-printer = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40", features = ["bundled"] }
sha2 = "0.11"
hex = "0.4"
tokio = { version = "1", features = ["net", "time", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.17"
lettre = { version = "0.11", features = ["smtp-transport", "builder", "rustls-tls"], default-features = false }
